--- a/notebook/Color Palette Generator.ipynb
+++ b/notebook/Color Palette Generator.ipynb
@@ -143,7 +143,7 @@
     {
      "data": {
       "text/markdown": [
-       "<span style='color:#003688'> ████</span> <span style='color:#CF142B'> ████</span> <span style='color:#FFFFFF'> ████</span>"
+       "<span style='color:#1F4788'> ████</span> <span style='color:#00022E'> ████</span> <span style='color:#EB2F06'> ████</span>"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -156,6 +156,22 @@
    "source": [
     "get_and_render_colors(\"Colors of the serbian flag\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de30a337-e923-4c12-8db1-8ee1eb44d226",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb349ae8-1c1b-4eb6-b82a-c23d2a056c37",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
