added some more Api parameters -> Stream and Penalties

--- a/notebook/Top p.ipynb
+++ b/notebook/Top p.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "2bd72912-61b8-4889-bd70-bb35b0f5c8df",
    "metadata": {},
    "outputs": [
@@ -106,13 +106,25 @@
      "output_type": "stream",
      "text": [
       "Top P 1:\n",
-      "My favorite food is spaghetti. It's one of my favorite meals because it's easy to make and can be served with a variety\n",
-      "of toppings. I love to have it with tomato sauce and cheese, but I also like to mix it up with pesto, garlic, and olive\n",
-      "oil too. Most importantly, it's a great comfort food!\n",
+      "My favorite food is tacos. Tacos are delicious and versatile. You can make them with just about any type of meat, fish,\n",
+      "or vegetable, and they come in a variety of flavors and textures. Whether it’s traditional American-style tacos with\n",
+      "ground beef, hard shell tacos with fried fish, or soft tacos with shredded chicken — tacos are a delicious crowd\n",
+      "pleaser. Not to\n",
+      "========================================================================================================================\n",
+      "Top P 0.75:\n",
+      "My favorite food is pizza. I love the way it tastes and the variety of toppings that you can choose from. I especially\n",
+      "love making my own pizza at home with my own special ingredients. There's nothing better than a fresh, hot, homemade\n",
+      "pizza!\n",
       "========================================================================================================================\n",
       "Top P 0.5:\n",
-      "My favorite food is pizza. I love pizza because it is so versatile. You can top it with almost anything and it always\n",
-      "tastes delicious. Plus, it's easy to make and can be a great snack or meal.\n",
+      "My favorite food is pizza. I love the combination of cheese, sauce, and crust. I also love the variety of toppings that\n",
+      "can be added to customize the pizza. Pizza is a great meal for any occasion, whether it's a casual gathering with\n",
+      "friends or a family dinner.\n",
+      "========================================================================================================================\n",
+      "Top P 0.25:\n",
+      "My favorite food is pizza. I love the combination of the crunchy crust, the savory sauce, and the melty cheese. I also\n",
+      "like to add a variety of toppings, like pepperoni, mushrooms, and olives. Pizza is a great meal for any occasion,\n",
+      "whether it's a casual night in or a special celebration.\n",
       "========================================================================================================================\n",
       "Top P 0:\n",
       "My favorite food is pizza. I love the combination of the doughy crust, the tangy tomato sauce, and the melty cheese. I\n",
@@ -128,9 +140,17 @@
     "        f\"Top P {top_p}\": openai.Completion.create(model=\"text-davinci-003\",prompt=\"\"\" My favorite food is\"\"\".strip(), max_tokens=75, echo=True,top_p=top_p)\n",
     "        .choices[0][\"text\"]\n",
     "        .strip()\n",
-    "        for top_p in [1,0.5,0]\n",
+    "        for top_p in [1,0.75,0.5,0.25,0]\n",
     "    })"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff3d7b3b-6206-4800-b186-4a9797b88875",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
