--- a/notebook/[6.1]Chat Completion example.ipynb
+++ b/notebook/[6.1]Chat Completion example.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "id": "ec3e0d35",
    "metadata": {},
    "outputs": [
@@ -50,44 +50,57 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Sure! Here are three trivia questions along with their answers:\n",
       "\n",
+      "1. Question: Which planet is known as the \"Red Planet\"?\n",
+      "   Answer: Mars.\n",
       "\n",
-      "On foggy mornings I must commute\n",
-      "To distant places that are far and remote\n",
-      "Through the mist and chill, I must push on\n",
-      "Swimming though the fog before dawn\n",
+      "2. Question: Who painted the famous artwork called \"The Persistence of Memory\"?\n",
+      "   Answer: Salvador Dalí.\n",
       "\n",
-      "The air is thick and wet, I cannot see\n",
-      "The way is unknown, but I must press on and be\n",
-      "Deciphering shapes of trees and homes\n",
-      "In this soup of white that never roams\n",
-      "\n",
-      "The journey ahead is a restless one\n",
-      "From here to there, through the fog and sun\n",
-      "The mind drifts away back to bed\n",
-      "Where the foggy morning will of course soon be dead\n",
-      "\n",
-      "But I persevere and through the mist I drive\n",
-      "With focus and drive for I must arrive\n",
-      "And perhaps in time, as I push on\n",
-      "The fog will break and the sun will be shone."
+      "3. Question: What is the capital city of Australia?\n",
+      "   Answer: Canberra.\n"
      ]
     }
    ],
    "source": [
-    "for data in openai.Completion.create(\n",
-    "    model=\"text-davinci-003\",\n",
-    "    prompt=\"write me a poem about foggy morning commutes\",\n",
-    "    max_tokens=300,\n",
-    "    stream=True\n",
-    "):\n",
-    "    print(data.choices[0].text, end=\"\", flush=True)"
+    "reply = openai.ChatCompletion.create(\n",
+    "    model=\"gpt-3.5-turbo\",\n",
+    "    messages=[\n",
+    "        {\"role\": \"user\",\"content\": \"Generate me 3 trivia questions and answers\"}\n",
+    "    ]\n",
+    ")\n",
+    "print(reply.choices[0].message.content)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f02e23b-ffa7-4c89-b6ae-70b1b57b6c01",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc537fe6-0159-4eff-8b53-0ed0be161e47",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23c0dd66-f1c4-4ad6-9668-eeb2f6189fa8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -101,7 +114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
