--- a/notebook/[8.4] Asking GPT4 To Write Code.ipynb
+++ b/notebook/[8.4] Asking GPT4 To Write Code.ipynb
@@ -50,167 +50,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "bb7ffb05",
    "metadata": {},
    "outputs": [],
    "source": [
-    "messages = [\n",
-    "    {\"role\": \"user\", \"content\": f\"Write a Python function that accepts an RGB color in the format 'rgb(85,145,0)' and returns the corresponding HSL color in the format 'hsl(85 100% 28%)'\"}\n",
-    "]"
+    "    messages = [\n",
+    "        {\"role\": \"system\", \"content\": \"\"\" You are an expert motivational letter writer and you need to help me get into a training course by helping me with a motivational letter,\n",
+    "         Given this input about the organization, you should generate a motivational letter and my motivation in taking part in this project.\n",
+    "         About me: Stevanka Cakmak, English Teacher, and volunteer, I'm a member of NSBI (The group of citizens “Novi Sad Cycling Initiative” was formed after the protest in 2010 held due to the action of the Novi Sad traffic police. On that occasion, hundreds of cyclists were fined for riding in the pedestrian zone. The protest gathered individuals who are involved in various ways in their professional work in “cycling topics”. These individuals include traffic engineers, architects, environmental engineers, and sports workers.Since there was a need to articulate civic demands and problems related to cycling and forward these demands to the city administration and the public, as well as the facts about the need to synchronize individual actions related to the popularization of cycling that are increasingly common, there was a need to form associations. “Novi Sad Cycling Initiative” was established on September 18, 2011 as an independent, non-governmental, non-profit organization, founded to achieve goals in the field of improvement, development and promotion of cycling, healthy lifestyles, energy efficiency and sustainable development. NSBI is an association of citizens of Novi Sad, which has decided to participate in and influence the decision-making related to cycling through civic activism, with the desire that projects intended for cyclists be implemented tailored to cyclists.)\n",
+    "         Input: \n",
+    "         TC Sustain Ability Training Course 22-29 January 2024 | Zaragoza, Spain TC Sustain Ability is a 6 day training course which aims to provide youth workers with tools and ideas to work with young people addressing \"green topics\" from different angles. TC Sustain Ability is a 6 day course which brings together 15 youth workers interested in working with green topics. Sustain Ability is a training course which aims to provide youth workers with tools and ideas to work with young people addressing \"green topics\" from different angles. Sustainability is a wide topic and we plan to delve deeper into only a few points such as green politics, circular economy, food sovereignty, ecoanxiety, depopulation. The aim is to work together on finding ways to bring these topics to the table in a fun way without producing the effect of catastrophe. We will share our good practices and hope to open up discussions while developing methodologies and solutions.. It is designed as a training and networking opportunity where we will also have time to get to know each other, visit different green and community-based initiatives in Zaragoza and have time to brainstorm for future synergies. Objectives -Develop new NFE tools and methodologies - Expand information and knowledge by offering tools that will help young people in democratic and civic participation. -Provide resources and relevant information for the development of critical thinking. -To broaden the participants' vision beyond their territories by bring Europe and its environmental policies closer. There will be an online webinar organized on 9th of January from 16:00 to 18:00 so that we can all get to know each other as well as the programme before the TC. Participant Profile: - People working in the youth field - Youth workers/Facilitators interested in non-formal learning methods - Members of partner organizations.\n",
+    "         \n",
+    "         \"\"\"   \n",
+    "        }\n",
+    "    ]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9e7c992a",
+   "id": "ce7c22bc-1146-4a79-8694-a835c91cc35f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "To convert an RGB color into a HSL color, you have to perform some operations on the RGB values. These operations involve finding the minimum and maximum values of the RGB colors, computing the difference, calculating the Hue, Saturation and Lightness. \n",
+      "Dear Selection Committee,\n",
       "\n",
-      "The algorithm is explained in details on Wikipedia: https://en.wikipedia.org/wiki/HSL_and_HSV#From_RGB\n",
+      "I am writing to express my sincere interest in joining the TC Sustain Ability Training Course set to take place from the 22nd to 29th January 2024, in Zaragoza, Spain. My name is Stevanka Cakmak, and I am a devoted English teacher, and an active volunteer at NSBI - The Novi Sad Cycling Initiative, a non-profit organization aiming to promote cycling, healthy lifestyles, and sustainable development. \n",
       "\n",
-      "Which could be implemented in Python as follows:\n",
+      "I am drawn to the TC Sustain Ability Training Course by your mission to provide youth workers with the ability to tackle 'green topics' from various angles, promoting essential discourse around sustainability. Your focus on green politics, circular economy, food sovereignty, eco-anxiety, and depopulation mirrors my personal and professional aspirations to equip the younger generation with the skills and knowledge to engage critically with these pressing issues. \n",
       "\n",
-      "```python\n",
-      "def rgb_to_hsl_function(rgb_string):\n",
-      "    # Remove the \"rgb(\" at the beginning and \")\" at the end and split the string into its color components\n",
-      "    r, g, b = map(float, rgb_string[4:-1].split(','))\n",
-      "    \n",
-      "    r, g, b = r / 255.0, g / 255.0, b / 255.0\n",
+      "As a member of NSBI since its inception in 2011, I have been deeply involved in advocating for the rights of cyclists and promoting a healthier, more eco-friendly lifestyle in Novi Sad. Within our organization, we navigate challenges surrounding sustainability and environmental preservation. I am keen to bring these experiences and my first-hand perspectives to the discussions during the TC Sustain Ability Training Course.\n",
       "\n",
-      "    mx = max(r, g, b)\n",
-      "    mn = min(r, g, b)\n",
-      "    diff = mx-mn\n",
-      "    \n",
-      "    if mx == mn:\n",
-      "        h = 0\n",
-      "    elif mx == r:\n",
-      "        h = (60 * ((g-b)/diff) + 360) % 360\n",
-      "    elif mx == g:\n",
-      "        h = (60 * ((b-r)/diff) + 120) % 360\n",
-      "    else:\n",
-      "        h = (60 * ((r-g)/diff) + 240) % 360\n",
-      "    \n",
-      "    l = (mx+mn) / 2\n",
+      "I am passionate about broadening my understanding beyond the scope of local issues and looking at environmental policies and sustainability from a European standpoint. Moreover, I am excited about the prospect of expanding my knowledge through non-formal learning methods, developing new NFE tools, and fostering critical thinking, which I believe will be vital in my future interactions with the youth I work with. \n",
       "\n",
-      "    if mx == mn:\n",
-      "        s = 0\n",
-      "    elif l <= 0.5:\n",
-      "        s = diff/(mx+mn)\n",
-      "    else:\n",
-      "        s = diff/(2.0-mx-mn)\n",
-      "        \n",
-      "    return 'hsl({0} {1}% {2}%)'.format(int(h), int(s*100), int(l*100))\n",
-      "```\n",
+      "Furthermore, my background as an English teacher and a volunteer places me in a unique position to facilitate the dissemination of ideas and principles taught in your course to a wider audience, thus enhancing its impact. My ability to communicate effectively, my passion for sustainable development, and my experience with youth engagement are all attributes I believe align perfectly with the profile of an ideal participant for the TC Sustain Ability Training Course.\n",
       "\n",
-      "Note that:\n",
-      "1. The inputs r, g, b are expected to be in the range [0, 255] while the output h (hue) is in the range [0, 360], and s (saturation) , l (lightness) are in the range [0, 1].\n",
-      "2. The output h, s, l are rounded and converted to integers.\n"
+      "Looking forward to the learning opportunities this training course would provide, I am particularly excited about the chance to network and collaborate with like-minded individuals, share successful practices in green initiatives, and brainstorm possible future synergies to advance our shared goal of sustainability.\n",
+      "\n",
+      "In closing, I would like to reiterate my keen interest in attending your training course and contribute my skills, knowledge, and perspectives to the invaluable discussions and activities. I am confident that the experience and knowledge garnered from TC Sustain Ability will equip me better in my mission to educate and empower the youth in my local community and beyond.\n",
+      "\n",
+      "Thank you for considering my application. I am looking forward to the potential opportunity of participating in the TC Sustain Ability Training Course. \n",
+      "\n",
+      "Best Regards,\n",
+      "\n",
+      "Stevanka Cakmak\n"
      ]
     }
    ],
    "source": [
-    "res = openai.ChatCompletion.create(\n",
+    "res= openai.ChatCompletion.create(\n",
     "    messages=messages,\n",
     "    model=\"gpt-4\"\n",
     ")\n",
     "print(res[\"choices\"][0][\"message\"][\"content\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "e98e5b48",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def rgb_to_hsl(r, g, b):\n",
-    "    r /= 255.0\n",
-    "    g /= 255.0\n",
-    "    b /= 255.0\n",
-    "    max_value = max(r, g, b)\n",
-    "    min_value = min(r, g, b)\n",
-    "    difference = max_value-min_value\n",
-    "\n",
-    "    if max_value == min_value:\n",
-    "        h = 0\n",
-    "    elif max_value == r:\n",
-    "        h = (60 * ((g-b)/difference) + 360) % 360\n",
-    "    elif max_value == g:\n",
-    "        h = (60 * ((b-r)/difference) + 120) % 360\n",
-    "    elif max_value == b:\n",
-    "        h = (60 * ((r-g)/difference) + 240) % 360\n",
-    "\n",
-    "    l = (max_value + min_value) / 2\n",
-    "\n",
-    "    if max_value == min_value:\n",
-    "        s = 0\n",
-    "    elif l <= 0.5:\n",
-    "        s = difference / (max_value + min_value)\n",
-    "    else:\n",
-    "        s = difference / (2 - max_value - min_value)\n",
-    "\n",
-    "    h = round(h, 2)\n",
-    "    s = round(s * 100, 2)\n",
-    "    l = round(l * 100, 2)\n",
-    "\n",
-    "    return h, s, l"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "ef2613fa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def rgb_to_hsl2(rgb_str):\n",
-    "    import colorsys\n",
-    "    \n",
-    "    # Extract the RGB values from the string.\n",
-    "    r, g, b = [int(x) for x in rgb_str[4:-1].split(',')]\n",
-    "\n",
-    "    # Convert RGB to float values ranging from 0 to 1.\n",
-    "    r /= 255.0\n",
-    "    g /= 255.0\n",
-    "    b /= 255.0\n",
-    "\n",
-    "    # Convert RGB to HSL values.\n",
-    "    h, l, s = colorsys.rgb_to_hls(r, g, b)\n",
-    "\n",
-    "    # Convert HSL to the proper format.\n",
-    "    h = int(h * 360)\n",
-    "    s = int(s * 100)\n",
-    "    l = int(l * 100)\n",
-    "\n",
-    "    # Return the resulting HSL string.\n",
-    "    return f'hsl({h} {s}% {l}%)'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "8ef9feca",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'hsl(84 100% 28%)'"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rgb_to_hsl2(\"rgb(85,145,0)\")"
    ]
   }
  ],
